--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
-    "expo": "~52.0.37",
+    "expo": "^52.0.37",
     "expo-app-loading": "^2.1.1",
     "expo-av": "^15.0.2",
     "expo-blur": "^14.0.3",
@@ -31,11 +31,12 @@
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
     "react-native-fast-image": "^8.6.3",
-    "react-native-reanimated": "^3.17.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
-    "react-native-video": "^6.10.2"
+    "react-native-video": "^6.10.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-gesture-handler": "~2.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
