--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.8.3",
+    "@clerk/types": "^4.47.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@supabase/supabase-js": "^2.49.1",
     "expo": "^52.0.37",
     "expo-app-loading": "^2.1.1",
+    "expo-auth-session": "~6.0.3",
     "expo-av": "^15.0.2",
     "expo-blur": "^14.0.3",
     "expo-camera": "^16.0.17",
@@ -27,8 +30,11 @@
     "expo-media-library": "^17.0.6",
     "expo-permissions": "^14.4.0",
     "expo-router": "~4.0.17",
+    "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "^14.0.2",
     "react": "18.3.1",
+    "react-dom": "^19.0.0",
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
     "react-native-fast-image": "^8.6.3",
